<resources>
    <string name="app_name">tianqiJiZhang</string>
    <string name="prompt_email">User name</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">登录</string>
    <string name="prompt_Email">E-mail</string>
    <string name="zhuceButton">注册</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
