<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffeb3b"
    android:orientation="vertical"
    tools:context=".ui.login.login"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.71">
        <ImageView
            android:layout_marginTop="70dp"
            android:layout_width="81dp"
            android:layout_height="106dp"
            android:background="@drawable/qidongye_03"/>

        <ImageView
            android:layout_marginTop="24dp"
            android:layout_width="101dp"
            android:layout_height="22dp"
            android:background="@drawable/qidong_07"/>

        <LinearLayout
            android:layout_marginTop="41dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical"
            android:layout_weight="0.00">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/prompt_email"
                    android:paddingLeft="15dp"
                    android:inputType="text"
                    android:maxLines="1"
                    android:background="@drawable/text_view_border"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/prompt_password"
                    android:paddingLeft="15dp"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:background="@drawable/text_view_border"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:text="@string/action_sign_in"
                android:textColor="#ffffff"
                android:textSize="17sp"
                android:textStyle="bold"
                android:background="@drawable/button_view_border"/>


        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="0.24">

        <TextView
            android:id="@+id/zhuceenzi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="还没有账号？点击"
            />

        <TextView
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="注册"
            android:textSize="18dp"
            android:textColor="#000000"
            android:layout_toRightOf="@+id/zhuceenzi"
            />

    </RelativeLayout>


</LinearLayout>
